# MMORPG

battle/: design-conf
battle/etc/: bench.conf.template  bind.conf.template
battle/src/: Makefile  affix_conf.h  builder_conf.h  cmd_processor_interface.h  common.h  data_proto_utils.cpp  data_proto_utils.h  dll_iface.cpp  dll_iface.h  duplicate_conf.h  duplicate_entity.cpp  duplicate_entity.h  duplicate_processor.cpp  duplicate_processor.h  duplicate_trigger.cpp  duplicate_trigger.h  global_data.cpp  map_conf.h  (+26 more)
dbproxy/: startup.sh
docs/: Redis╖■╬ё╞ў┤ю╜и.docx  chat_design.docx  friend_design.docx  gdb╡─╩╣╙├.doc  new_commer.docx  proxy╙ы╖■╬ё╞ў╓▒┴м.docx  share1.docx  swim_design.docx  task_design.docx  trans_prof_design.docx  ┼·┴┐╖в╧▀╔╧╙╩╝■.txt  ║є╠и╖╜░╕╩╡╧╓▓╬┐╝╩╓▓сv1.0.docx  ╝╥╫х║є╠и┐к╖в╦╡├ў╬─╡╡.docx  ╠╘├╫┴к╘╦╙╬╧╖│ф╓╡╜╙┐┌╬─╡╡.doc  ╡╝╩ж┼р╤°╨┬╚╦╓╕─╧.docx  ╩└╜чboss┐к╖в╦╡├ў╬─╡╡.docx
online/: design-conf
robot/: CMakeLists.txt  TODO  cli_cmd.h  client-inl.h  client.cc  client.h  cmd_msg.cc  cmd_msg.h  common.h  common.pb.cc  common.pb.h  config.cc  config.h  header.pb.cc  header.pb.h  main.cc  mencrypt.cc  mencrypt.h  pb0x00.pb.cc  pb0x00.pb.h  pb0x01.pb.cc  pb0x01.pb.h  road_map_102053  road_map_6031662  robot.cc  run  svc_proto  tags
robot/cmake/: Findglib.cmake  Findtcmalloc.cmake  Findunwind.cmake  Finduuid.cmake
robot/prepare/: main
robot/prepare/enter_map/: enter_map.prepare.sql
robot/proto/: create_account.pbconf  login.pbconf  robot.pbconf  robot.proto  robot_up.pbconf  world_boss.pbconf
statlogger/: statlogger.h  statlogger.php
thttpd/: bench.conf
(+550 files in other folders)
